fix: update layout issues

--- a/src/layouts/MainLayout.scss
+++ b/src/layouts/MainLayout.scss
@@ -1,7 +1,7 @@
 @import '../styles/mixins.scss';
 
 .main-layout {
-  display: flex;
+ 
   min-height: 100vh;
   padding-top: 100px;
 
@@ -11,13 +11,18 @@
 }
 
 .main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   background: #f5f5f5;
-  padding: 12px;
+  padding: 40px 12px 12px;
+ 
   overflow-y: auto;
 
   @include breakpoint-up(medium) {
     padding: 0 40px;
+   
   }
 
   @include breakpoint-up(large) {
@@ -40,10 +45,16 @@
     height: 40px; 
     width: 300px;
     border-radius: 100px; 
-    border: 2px solid #545F7D;
+    border: 1px solid #dcdcdc;
     padding: 0 72px 0 12px; 
     font-size: 14px;
     box-sizing: border-box;
+    outline: none;
+
+    &:focus {
+      border-color: #39cdcc;
+      font-size: 14px;
+    }
   }
 
   .dashboard-nav__search-action {
